--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,9 @@
         <section id="about me">
         <h4>Alachttoukh Hadil</h4>
         <h2>Embedded Systems and IOT Engineer</h2>
+        <iframe width="600" height="350" src="https://www.youtube.com/embed/oPn_adlC1Q0"
+        title="What is an Embedded System? | Concepts" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div>
             <label>Age</label>
             <p>22 years old</p>
@@ -47,6 +50,12 @@
     <section id="work"></section>
     <section id="resume"></section>
     <section id="contact"></section>
+    
+    <form>
+        Name <input type="text" name="first name" placeholder="enter your name here">
+        Number <input type="number" name="phone number" placeholder="enter your number here">
+        Birth date <input type="date" name="enter your birth date">
+    </form>
     <footer>
         <a href="https://www.facebook.com/hadil.alachttoukh.9"></a>
         <a href="https://www.instagram.com/alachttoukh_hadil/"></a>
