--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 <head>
     <title> My first new page </title>
+    <style>
+			h1 {
+			  color: aqua;
+			  font: sans-serif;
+			}
+			p {
+			  color: darkblue;
+			  font: small;
+			}
+		</style>
+</head>  
     <link rel="icon" href="https://www.freepnglogos.com/uploads/logo-website-png/logo-website-file-globe-icon-svg-wikimedia-commons-21.png" type="image/x-icon">
     <a name="TopOfThePage"> </a>
     <ul type="square">
@@ -94,5 +105,13 @@
     <textarea name="message" cols="20" rows="10">
       Welcome to GoMyCode
   </textarea>
+  <header>
+    <nav>
+      <div class="nav-bar">
+        <h1>Brand</h1>
+        <a href=""></a>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
